# axum-demo

./: Cargo.toml  data.db
migrations/: 20240622072717_create_users.up.sql  20240622103801_create_counters.down.sql  20240622103801_create_counters.up.sql
src/: api.rs  db.rs  main.rs
src/api/: counter.rs  jwt.rs  user.rs
